--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fenty.no</title>
     <link rel="stylesheet" href="/css/ui.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <script type="module" src="js/fetchAPI/getPost.js"></script>
 </head>
 
 <body>
@@ -18,7 +24,7 @@
         <nav class="main-menu">
             <ul>
                 <li>HJEM</li>
-                <li>OM OSS</li>
+                <li><a href="about.html">OM OSS</a></li>
                 <li>FENTY BEAUTY</li>
                 <li>FENTY SKIN</li>
                 <li>SAVAGEx</li>
@@ -35,7 +41,7 @@
                 <img class="scroll-down" src="/img/skroll-ned.png">
                 <p>Side informasjon</p>
                 <div class="horizontal-line"></div>
-                <p>Velkommen til FENTY.no.</p>
+                <p>Velkommen til <b>FENTY.no</b></p>
                 <p>Få alle de siste nyhetene om Rihannas seneste utgivelelser fra hennes Fenty univers</p>
             </div>
             <div class="new-posts-site-info">
@@ -52,21 +58,68 @@
         </div>
         <h1 class="news-and-content">NYHETER OG INNHOLD</h1>
 
-        <div class="main-content">
+        <main>
             <div class="blog-content">
+                <div class="blog-posts-container">
+                    <!-- <div class="blog-post">
+                    <a href="single-post.html">
+                        <div class="blog-post-header">
+                            <div class="blog-date">
+                                <h4>16.januar 2024</h4>
+                            </div>
+                            <div class="blog-post-header-img">
+                                <img src="/img/post-top-image.png">
+                            </div>
+                        </div>
+                        <div class="blog-post-content">
+                            <div class="blog-post-img-title">
+                                <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
+                                <h1 class="blog-post-title">RIHANNA DEBUTES NEW EYE PRODUCT</h1>
+                            </div>
+                            <p class="blog-post-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci,
+                                vitae
+                                placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam
+                                eu
+                                nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia
+                                velit
+                                in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
+                                dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
+                                Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor
+                                sit
+                                amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
+                                Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
+                                Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque
+                                fermentum
+                                semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
+                                Pellentesque aliquam, turpis eu elementum aliquam, tortor est </p>
+                        </div>
+                        <div class="blog-post-info">
+                            <div class="author">
+                                <p>Posted by: Marte</p>
+                            </div>
+                            <div class="dateandtime">
+                                <p>January 16th 2024 15:45</p>
+                            </div>
+                            <div class="comments">
+                                <p>5 comments</p>
+                            </div>
+                        </div>
+                </div>
+                </a>
                 <div class="blog-post">
                     <div class="blog-post-header">
                         <div class="blog-date">
                             <h4>16.januar 2024</h4>
                         </div>
                         <div class="blog-post-header-img">
-                            <img src="/img/post-top-image.png">
+                            <img src="/img/post-top-image-eyes.png">
                         </div>
                     </div>
                     <div class="blog-post-content">
                         <div class="blog-post-img-title">
                             <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
-                            <h1 class="blog-post-title">RIHANNA DEBUTES NEW EYE PRODUCT</h1>
+                            <h1 class="blog-post-title">RIHANNA DEBUTERER NYTT ØYE-PRODUKT</h1>
                         </div>
                         <p class="blog-post-text">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
@@ -93,6 +146,7 @@
                         </div>
                     </div>
                 </div>
+
 
                 <div class="blog-post">
                     <div class="blog-post-header">
@@ -132,70 +186,46 @@
                             <p>5 comments</p>
                         </div>
                     </div>
+
+                </div> -->
                 </div>
-
-
-                <div class="blog-post">
-                    <div class="blog-post-header">
-                        <div class="blog-date">
-                            <h4>16.januar 2024</h4>
-                        </div>
-                        <div class="blog-post-header-img">
-                            <img src="/img/post-top-image-eyes.png">
-                        </div>
-                    </div>
-                    <div class="blog-post-content">
-                        <div class="blog-post-img-title">
-                            <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
-                            <h1 class="blog-post-title">RIHANNA DEBUTERER NYTT ØYE-PRODUKT</h1>
-                        </div>
-                        <p class="blog-post-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
-                            placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
-                            nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
-                            in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                            dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                            Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
-                            amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                            Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                            Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
-                            semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                            Pellentesque aliquam, turpis eu elementum aliquam, tortor est </p>
-                    </div>
-                    <div class="blog-post-info">
-                        <div class="author">
-                            <p>Posted by: Marte</p>
-                        </div>
-                        <div class="dateandtime">
-                            <p>January 16th 2024 15:45</p>
-                        </div>
-                        <div class="comments">
-                            <p>5 comments</p>
-                        </div>
-                    </div>
-
-                </div>
-
-
                 <p class="load-more">Last inn flere innlegg</p>
 
             </div>
             <div class="sidebar">
+                <div class="newest-posts">
+                    <img src="/img/newsest-posts.png">
+                    <h2>Nyeste innlegg</h2>
+                    <div class="horizontal-line"></div>
+                    <ul>
+                        <li>Dette er den nyeste posten</li>
+                        <p class="read-more">Les mer</p>
+                        <li>Dette er den nest nyeste posten</li>
+                        <p class="read-more">Les mer</p>
+                        <li>Dette er den tredje posten</li>
+                        <p class="read-more">Les mer</p>
+                        <li>Dette er den fjerde nyeste posten</li>
+                        <p class="read-more">Les mer</p>
+                    </ul>
+                </div>
+                <div class="newest-comments">
+                    <h2>Siste kommentarer</h2>
+                    <div class="horizontal-line"></div>
+                    <ul>
+                        <li>Dette er den nyeste kommentaren</li>
+                        <li>Dette er den nest nyeste kommentaren</li>
+                        <li>Dette er den tredje kommentaren</li>
+                        <li>Dette er den fjerde nyeste kommentaren</li>
+                    </ul>
+                </div>
                 <div class="newest-instagram">
                     <img src="/img/instagram-header.png">
                     <h2>Instagram feed</h2>
                     <div class="horizontal-line"></div>
                 </div>
-                <div class="newest-posts">
-                    <img src="/img/newsest-posts.png">
-                    <h2>Nyeste innlegg</h2>
-                </div>
-                <div class="newest-comments">
-                    <h2>Siste kommentarer</h2>
-                </div>
 
             </div>
-        </div>
+        </main>
         <footer>
             Copyright berremarte.no 2024
         </footer>
