building my single post page
Trying to understand the wp rest api and where to find the data I need.
Practicing the structure of my files and playing around with alot of stuff.
managed to build my dingle post page and fetch alot of the data i am in need of.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
         <h1 class="news-and-content">NYHETER OG INNHOLD</h1>
 
         <main>
-            <div class="blog-content">
-                <div class="blog-posts-container">
-                    <!-- <div class="blog-post">
+            <div class="blog-and-sidebar">
+                <div class="blog-content">
+                    <div class="blog-posts-container">
+                        <div class="loader">Loading..</div>
+                        <!-- <div class="blog-post">
                     <a href="single-post.html">
                         <div class="blog-post-header">
                             <div class="blog-date">
@@ -188,42 +190,48 @@
                     </div>
 
                 </div> -->
-                </div>
-                <p class="load-more">Last inn flere innlegg</p>
+                    </div>
+                    <p class="load-more">Last inn flere innlegg</p>
 
-            </div>
-            <div class="sidebar">
-                <div class="newest-posts">
-                    <img src="/img/newsest-posts.png">
-                    <h2>Nyeste innlegg</h2>
-                    <div class="horizontal-line"></div>
-                    <ul>
-                        <li>Dette er den nyeste posten</li>
-                        <p class="read-more">Les mer</p>
-                        <li>Dette er den nest nyeste posten</li>
-                        <p class="read-more">Les mer</p>
-                        <li>Dette er den tredje posten</li>
-                        <p class="read-more">Les mer</p>
-                        <li>Dette er den fjerde nyeste posten</li>
-                        <p class="read-more">Les mer</p>
-                    </ul>
                 </div>
-                <div class="newest-comments">
-                    <h2>Siste kommentarer</h2>
-                    <div class="horizontal-line"></div>
-                    <ul>
-                        <li>Dette er den nyeste kommentaren</li>
-                        <li>Dette er den nest nyeste kommentaren</li>
-                        <li>Dette er den tredje kommentaren</li>
-                        <li>Dette er den fjerde nyeste kommentaren</li>
-                    </ul>
-                </div>
-                <div class="newest-instagram">
-                    <img src="/img/instagram-header.png">
-                    <h2>Instagram feed</h2>
-                    <div class="horizontal-line"></div>
-                </div>
+                <div class="sidebar">
+                    <div class="newest-posts">
+                        <img src="/img/newsest-posts.png">
+                        <h2>Nyeste innlegg</h2>
+                        <div class="horizontal-line"></div>
+                        <div class="new-blog-post-list">
+                            <ul>
+                                <!--
+                            <li>Dette er den nyeste posten</li>
+                            <p class="read-more">Les mer</p>
+                            <li>Dette er den nest nyeste posten</li>
+                            <p class="read-more">Les mer</p>
+                            <li>Dette er den tredje posten</li>
+                            <p class="read-more">Les mer</p>
+                            <li>Dette er den fjerde nyeste posten</li>
+                            <p class="read-more">Les mer</p>
+                        -->
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="newest-comments">
+                        <img src="/img/instagram-header.png">
+                        <h2>Siste kommentarer</h2>
+                        <div class="horizontal-line"></div>
+                        <ul>
+                            <li>Dette er den nyeste kommentaren</li>
+                            <li>Dette er den nest nyeste kommentaren</li>
+                            <li>Dette er den tredje kommentaren</li>
+                            <li>Dette er den fjerde nyeste kommentaren</li>
+                        </ul>
+                    </div>
+                    <div class="newest-instagram">
+                        <img src="/img/instagram-header.png">
+                        <h2>Instagram feed</h2>
+                        <div class="horizontal-line"></div>
+                    </div>
 
+                </div>
             </div>
         </main>
         <footer>
