--- a/single-post.html
+++ b/single-post.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fenty.no - blog post</title>
     <link rel="stylesheet" href="/css/ui.css">
+    <script type="module" src="/js/Pages.js/singlePost.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -31,40 +32,42 @@
             </ul>
         </nav>
     </head>
-    <div class="main-container">
-        <img class="main-post-img" src="/img/rih.jpeg.jpg">
-        <div class="breadcrumbs">
-            <p>Home / Fenty skin / This is the blog post</p>
-        </div>
-        <h1>THIS IS THE POST TITLE</h1>
-        <div class="single-blog-post-info">
-            <div class="author">
-                <p>Posted by: Marte</p>
+    <main>
+        <div class="main-container">
+            <!-- <img class="main-post-img" src="/img/rih.jpeg.jpg">
+            <div class="breadcrumbs">
+                <p>Home / Fenty skin / This is the blog post</p>
             </div>
-            <div class="dateandtime">
-                <p>January 16th 2024 15:45</p>
+            <h1>THIS IS THE POST TITLE</h1>
+            <div class="single-blog-post-info">
+                <div class="author">
+                    <p>Posted by: Marte</p>
+                </div>
+                <div class="dateandtime">
+                    <p>January 16th 2024 15:45</p>
+                </div>
+                <div class="comments">
+                    <p>5 comments</p>
+                </div>
             </div>
-            <div class="comments">
-                <p>5 comments</p>
+            <div class="single-blog-post-text">
+                <p>TLorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
+                    placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
+                    nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
+                    in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
+                    dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
+                    Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
+                    amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
+                    Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
+                    Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
+                    semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
+                    Pellentesque aliquam, turpis eu elementum aliquam, tortor est</p>
             </div>
+            <div class="category">
+                <p>Category: Fenty Skin</p>
+            </div> -->
         </div>
-        <div class="single-blog-post-text">
-            <p>TLorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
-                placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
-                nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
-                in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
-                amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
-                semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                Pellentesque aliquam, turpis eu elementum aliquam, tortor est</p>
-        </div>
-        <div class="category">
-            <p>Category: Fenty Skin</p>
-        </div>
-    </div>
+    </main>
     <footer>
         Copyright berremarte.no 2024
     </footer>
