new pages and fetched comment tot he sidebar
added about and contact .html, not done, no js on form.
added links in menu, not all correct, styled footer a tiny bit

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fenty.no - Om oss</title>
-    <link rel="stylesheet" href="/css/ui.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,15 +23,64 @@
         <nav class="main-menu">
             <ul>
                 <li><a href="index.html">HJEM</a></li>
-                <li>OM OSS</li>
-                <li>FENTY BEAUTY</li>
-                <li>FENTY SKIN</li>
-                <li>SAVAGEx</li>
-                <li>KONTAKT</li>
+                <li><a href="about.html">OM OSS</a></li>
+                <li><a href="about.html">FENTY BEAUTY</a></li>
+                <li><a href="about.html">FENTY SKIN</a></li>
+                <li><a href="about.html">SAVAGEx</a></li>
+                <li><a href="about.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
+    <main>
+        <div class="main-content">
+            <div class="about-text">
+                <h1>FENTY.no - Hvem er bak?</h1>
+                <p>Fenty.no ble skapt i 2024, men jeg har tidligere vært med å drevet, det som den gang var, norges
+                    offisielle fanside, Rihanna.no</p>
+                <p>Jeg har vært fan av Rihanna siden hun først ga ut "Pon de Replay" i 2015, og har siden den gang vært
+                    på
+                    utallige konserter, her i Norge og i utlandet. I 2011 fikk jeg møte henne etter konserten hun holdt
+                    i
+                    Oslo Spektrum, og i 2013 fikk jeg levert et fotobok-prosjekt jeg og noen andre fans hadde laget til
+                    henne om hennes karriere så langt. Denne boken la hun ut bilde av på sin egen instagram samme kveld,
+                    i
+                    tilegg
+                    til at hun startet å følge instagram kontoen jeg driver, dette var nok peak fan-moment!
+                </p>
+                <p>Ønsket om å starte en ny Rihanna blog etter at den tidligere siden brått gikk i svart, har vært stort
+                    lenge. Før fokuserte jeg på daglige nyheter med paparazzi bilder tatt fra nett, men med årene har
+                    opphavsrett blitt løftet frem og gjort det vanskligere å dele paparazzi-bilder uten å betale dyre
+                    dommer
+                    for de. Denne bloggen vil derfor handle mye om Rihannas merker, Fenty Skin, Fenty Beauty osv. -og nå
+                    er
+                    vel ikke Rihanna den som er mest ute å bli sett på gatene lengre så fokus-skifte passer fint.</p>
+                <p>Er vi heldige vil de komme musikk-nyheter også, men la oss ikke holde pusten..</p>
+                <p>Jeg håper du finner mye nyttig, ny, og ønsket informasjon på denne siden etterhvert som den får
+                    føtter å gå på! Hold ut med meg i startfasen mens den bygges opp, så lover jeg at dette blir din
+                    go-to side for alt Fenty!</p>
+                <p>Takk for at du stakk innom!</p>
+                <p>Vennlig hilsen, Marte</p>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="left-footer">
+            <div class="footer-menu">
+                <ul>
+                    <li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="center-footer">
+            <div class="copyright">
+                <p>Copyright berremarte.no 2024</p>
+                </p>All Rights Reserved</p>
+            </div>
+        </div>
+        <div class="right-footer"></div>
 
+    </footer>
 </body>
 
 </html>
