--- a/single-post.html
+++ b/single-post.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fenty.no - blog post</title>
-    <link rel="stylesheet" href="/css/ui.css">
+    <link rel="stylesheet" href="/css/index.css">
     <script type="module" src="/js/Pages.js/singlePost.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,16 +24,18 @@
         <nav class="main-menu">
             <ul>
                 <li><a href="index.html">HJEM</a></li>
-                <li>OM OSS</li>
-                <li>FENTY BEAUTY</li>
-                <li>FENTY SKIN</li>
-                <li>SAVAGEx</li>
-                <li>KONTAKT</li>
+                <li><a href="about.html">OM OSS</a></li>
+                <li><a href="about.html">FENTY BEAUTY</a></li>
+                <li><a href="about.html">FENTY SKIN</a></li>
+                <li><a href="about.html">SAVAGEx</a></li>
+                <li><a href="about.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
     <main>
-        <div class="main-container">
+        <div class="single-blogpost-container">
+            <div class="loader">Loading..</div>
+
             <!-- <img class="main-post-img" src="/img/rih.jpeg.jpg">
             <div class="breadcrumbs">
                 <p>Home / Fenty skin / This is the blog post</p>
@@ -67,9 +69,26 @@
                 <p>Category: Fenty Skin</p>
             </div> -->
         </div>
+
+
     </main>
     <footer>
-        Copyright berremarte.no 2024
+        <div class="left-footer">
+            <div class="footer-menu">
+                <ul>
+                    <li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="center-footer">
+            <div class="copyright">
+                <p>Copyright berremarte.no 2024</p>
+                </p>All Rights Reserved</p>
+            </div>
+        </div>
+        <div class="right-footer"></div>
+
     </footer>
 </body>
 
