media.css and post carousel
started on blog post carousel under main menu. Fetched single post for now, haven't added event listener for the arrows.

Started working on my responsive layout in the media.css file.

Started on one more .css file, need to move alot form ui.css to utilities.css

good night.

--- a/about.html
+++ b/about.html
@@ -27,12 +27,13 @@
                 <li><a href="about.html">FENTY BEAUTY</a></li>
                 <li><a href="about.html">FENTY SKIN</a></li>
                 <li><a href="about.html">SAVAGEx</a></li>
-                <li><a href="about.html">KONTAKT</a></li>
+                <li><a href="contact.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
     <main>
         <div class="main-content">
+            <img class="about-img" src="/img/324696_10150903940575790_1147385479_o.jpg">
             <div class="about-text">
                 <h1>FENTY.no - Hvem er bak?</h1>
                 <p>Fenty.no ble skapt i 2024, men jeg har tidligere vært med å drevet, det som den gang var, norges
