--- a/contact.html
+++ b/contact.html
@@ -27,12 +27,17 @@
                 <li><a href="about.html">FENTY BEAUTY</a></li>
                 <li><a href="about.html">FENTY SKIN</a></li>
                 <li><a href="about.html">SAVAGEx</a></li>
-                <li><a href="about.html">KONTAKT</a></li>
+                <li><a href="contact.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
     <main>
-        <div class="main-content">
+        <div class="contact-page-container">
+            <img class="contact-img" src="/img/P10056222_2.avif">
+            <h1>Lurer du på noe?</h1>
+            <p>Har du et spørsmål om Rihanna eller noe angående hennes merkervarer kan du sende meg en melding, så skal
+                jeg gjøre så godt jeg kan å svare på det!</p>
+            <p>Fyll ut skjemaet under med navn, email, emne, og skriv spørsmålet ditt i melding boksen.</p>
             <div class="contact-form">
                 <form id="form" action="/" novalidate>
                     <fieldset>
