--- a/index.html
+++ b/index.html
@@ -48,12 +48,18 @@
                 <div class="new-posts-site-info-header">
                     <p>Klikk på pilene for å se mer</p>
                     <div class="new-posts-site-info-header-text">
-                        <h5>Nye innlegg og oppdateringer</h5>
+                        <h5>Sjekk ut de nyeste innleggene</h5>
                     </div>
-
                 </div>
-                <div class="new-blog-post-carousel"></div>
-
+                <div class="carousel-arrow-content">
+                    <div class="left-arrow">
+                        <img src="/img/icons/arrow-left.png">
+                    </div>
+                    <div class="new-blog-post-carousel"></div>
+                    <div class="right-arrow">
+                        <img src="/img/icons/arrow-right.png">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -197,7 +203,7 @@
             </div>
             <div class="sidebar">
                 <div class="newest-posts">
-                    <img src="/img/newsest-posts.png">
+                    <img src="/img/instagram-header.png">
                     <h2>Nyeste innlegg</h2>
                     <div class="horizontal-line"></div>
                     <div class="new-blog-post-list">
