--- a/single-post.html
+++ b/single-post.html
@@ -28,7 +28,7 @@
                 <li><a href="about.html">FENTY BEAUTY</a></li>
                 <li><a href="about.html">FENTY SKIN</a></li>
                 <li><a href="about.html">SAVAGEx</a></li>
-                <li><a href="about.html">KONTAKT</a></li>
+                <li><a href="contact.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
