All pages created.
Added all pages, not done editing text on those but layout is set.
Added a filter section in the sidebar, not assigned to any js yet.
++other tewaks on the layout, like a dropdown menu under "varemerker". Not super happy about how it looks so will return to it later.
Trying to make my css cleaner.

--- a/discography.html
+++ b/discography.html
@@ -40,43 +40,10 @@
         <div class="contact-page-container">
             <img class="page-header-img" src="/img/P10056222_2.avif">
             <div class="about-text">
-                <h1>Lurer du på noe?</h1>
-                <p>Har du et spørsmål om Rihanna eller noe angående hennes merkervarer kan du sende meg en melding, så
-                    skal
-                    jeg gjøre så godt jeg kan å svare på det!</p>
-                <p>Fyll ut skjemaet under med navn, email, emne, og skriv spørsmålet ditt i melding boksen.</p>
+                <h1>Rihannas musikk-katalog</h1>
+                <p>Litt om Rihannas katalog</p>
             </div>
-            <div class="contact-form">
-                <form id="form" action="/" novalidate>
-                    <fieldset>
-                        <legend>Fyll ut skjemaet</legend>
-                        <div class="input-control">
-                            <label for="name">Navn:*</label>
-                            <input type="text" name="name" id="name" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="email">Email:*</label>
-                            <input type="email" name="email" id="email" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="subject">Emne:*</label>
-                            <input type="text" name="subject" id="subject" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="message">Melding:*</label>
-                            <textarea name="message" id="message" required></textarea>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="submit-form">
-                            <label for="submit">Send inn kontaktskjema:</label>
-                            <button type="submit" id="submit">Send</button>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
+
         </div>
     </main>
     <footer>
