--- a/about.html
+++ b/about.html
@@ -24,16 +24,21 @@
             <ul>
                 <li><a href="index.html">HJEM</a></li>
                 <li><a href="about.html">OM OSS</a></li>
-                <li><a href="about.html">FENTY BEAUTY</a></li>
-                <li><a href="about.html">FENTY SKIN</a></li>
-                <li><a href="about.html">SAVAGEx</a></li>
+                <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                    <ul class="sub-menu">
+                        <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
+                        <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
+                        <li><a href="savagex.html">-SAVAGEx</a></li>
+                    </ul>
+                </li>
+                <li><a href="discography.html">MUSIKK</a></li>
                 <li><a href="contact.html">KONTAKT</a></li>
             </ul>
         </nav>
     </head>
     <main>
         <div class="main-content">
-            <img class="about-img" src="/img/324696_10150903940575790_1147385479_o.jpg">
+            <img class="page-header-img" src="/img/324696_10150903940575790_1147385479_o.jpg">
             <div class="about-text">
                 <h1>FENTY.no - Hvem er bak?</h1>
                 <p>Fenty.no ble skapt i 2024, men jeg har tidligere vært med å drevet, det som den gang var, norges
