--- a/savagex.html
+++ b/savagex.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fenty.no - Kontakt</title>
+    <title>Fenty.no - Savage x Fenty</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,42 +40,8 @@
         <div class="contact-page-container">
             <img class="page-header-img" src="/img/P10056222_2.avif">
             <div class="about-text">
-                <h1>Lurer du på noe?</h1>
-                <p>Har du et spørsmål om Rihanna eller noe angående hennes merkervarer kan du sende meg en melding, så
-                    skal
-                    jeg gjøre så godt jeg kan å svare på det!</p>
-                <p>Fyll ut skjemaet under med navn, email, emne, og skriv spørsmålet ditt i melding boksen.</p>
-            </div>
-            <div class="contact-form">
-                <form id="form" action="/" novalidate>
-                    <fieldset>
-                        <legend>Fyll ut skjemaet</legend>
-                        <div class="input-control">
-                            <label for="name">Navn:*</label>
-                            <input type="text" name="name" id="name" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="email">Email:*</label>
-                            <input type="email" name="email" id="email" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="subject">Emne:*</label>
-                            <input type="text" name="subject" id="subject" required>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="input-control">
-                            <label for="message">Melding:*</label>
-                            <textarea name="message" id="message" required></textarea>
-                            <div class="form-error"></div>
-                        </div>
-                        <div class="submit-form">
-                            <label for="submit">Send inn kontaktskjema:</label>
-                            <button type="submit" id="submit">Send</button>
-                        </div>
-                    </fieldset>
-                </form>
+                <h1>Savage X</h1>
+                <p>Litt om klesmerket SavageX</p>
             </div>
         </div>
     </main>
