--- a/single-post.html
+++ b/single-post.html
@@ -25,9 +25,14 @@
             <ul>
                 <li><a href="index.html">HJEM</a></li>
                 <li><a href="about.html">OM OSS</a></li>
-                <li><a href="about.html">FENTY BEAUTY</a></li>
-                <li><a href="about.html">FENTY SKIN</a></li>
-                <li><a href="about.html">SAVAGEx</a></li>
+                <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                    <ul class="sub-menu">
+                        <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
+                        <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
+                        <li><a href="savagex.html">-SAVAGEx</a></li>
+                    </ul>
+                </li>
+                <li><a href="discography.html">MUSIKK</a></li>
                 <li><a href="contact.html">KONTAKT</a></li>
             </ul>
         </nav>
