more posts button working
Need to figure out how to disable button when there is no more posts to load.
added a non working searchbar. and played around with some styling.

--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -38,7 +38,7 @@
     </head>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/fentybeautyquote.jpg">
+            <img class="page-header-img" src="/img/idy93qupGb.jpeg">
             <div class="about-text">
                 <h1>Fenty Beauty</h1>
                 <p>Litt om Fenty Beauty</p>
