--- a/index.html
+++ b/index.html
@@ -214,22 +214,30 @@
                     <div class="filter-posts">
                         <div class="fenty-beauty-checkbox">
                             <input type="checkbox" id="fenty-beauty-filter" name="fenty-beauty">
-                            <label for="fenty-beauty">Fenty Beauty</label>
+                            <label for="fenty-beauty-filter">Fenty Beauty</label>
                         </div>
                         <div class="fenty-skin-checkbox">
                             <input type="checkbox" id="fenty-skin-filter" name="fenty-skin">
-                            <label for="fenty-skin">Fenty Skin</label>
+                            <label for="fenty-skin-filter">Fenty Skin</label>
                         </div>
                         <div class="savagex-checkbox">
                             <input type="checkbox" id="savagex-filter" name="savagex">
-                            <label for="savagex">Savagex</label>
+                            <label for="savagex-filter">Savagex</label>
                         </div>
                         <div class="music-checkbox">
                             <input type="checkbox" id="music-filter" name="music">
-                            <label for="music">Musikk</label>
+                            <label for="music-filter">Musikk</label>
+                        </div>
+                        <div class="collaboration-checkbox">
+                            <input type="checkbox" id="collaboration-filter" name="collaboration">
+                            <label for="collaboration-filter">Samarbeid</label>
                         </div>
                         <button class="filter-button">Filtrer</button>
                     </div>
+                </div>
+                <div class="searchbar">
+                    <label for="searchbar">Eller søk etter tema:</label>
+                    <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
                 </div>
                 <div class="newest-posts">
                     <img src="/img/instagram-header.png">
@@ -261,11 +269,11 @@
                             <li>Dette er den fjerde nyeste kommentaren</li> -->
                     </ul>
                 </div>
-                <div class="newest-instagram">
+                <!-- <div class="newest-instagram">
                     <img src="/img/instagram-header.png">
                     <h2>Instagram feed</h2>
                     <div class="horizontal-line"></div>
-                </div>
+                </div> -->
 
             </div>
         </div>
