--- a/savagex.html
+++ b/savagex.html
@@ -38,7 +38,7 @@
     </head>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/P10056222_2.avif">
+            <img class="page-header-img" src="/img/savagex-logo.jpg">
             <div class="about-text">
                 <h1>Savage X</h1>
                 <p>Litt om klesmerket SavageX</p>
