--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -38,7 +38,7 @@
     </head>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/P10056222_2.avif">
+            <img class="page-header-img" src="/img/fenty-skin-header.jpg">
             <div class="about-text">
                 <h1>Fenty Skin</h1>
                 <p>Litt om hudpleiemerket Fenty Skin</p>
