carousel and date stamp update
changed display of date, added a bo back link from single post.
Made a working blog post carousel

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                     </div>
                 </div>
                 <div class="carousel-arrow-content">
-                    <div class="left-arrow">
+                    <div class="left-arrow .disabled-arrow">
                         <img src="/img/icons/arrow-left.png">
                     </div>
                     <div class="new-blog-post-carousel"></div>
-                    <div class="right-arrow">
+                    <div class="right-arrow .disabled-arrow">
                         <img src="/img/icons/arrow-right.png">
                     </div>
                 </div>
