domparser and fil structure work
moving functions into seperate files for a, hopefully, better structure.
Wrote the DOMparser code from class.

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
                 </div> -->
                 </div>
-                <p class="load-more">Last inn flere innlegg</p>
+                <p class="load-more load-more-link">Last inn flere innlegg</p>
 
             </div>
             <div class="sidebar">
