modal and design
Modal added to single-post.
responsive styling changes.

--- a/single-post.html
+++ b/single-post.html
@@ -39,9 +39,10 @@
     </head>
     <main>
         <div class="single-blogpost-container">
-            <div class="loader">Loading..</div>
+            <div class="single-blogpost-content">
+                <div class="loader">Loading..</div>
 
-            <!-- <img class="main-post-img" src="/img/rih.jpeg.jpg">
+                <!-- <img class="main-post-img" src="/img/rih.jpeg.jpg">
             <div class="breadcrumbs">
                 <p>Home / Fenty skin / This is the blog post</p>
             </div>
@@ -73,6 +74,11 @@
             <div class="category">
                 <p>Category: Fenty Skin</p>
             </div> -->
+            </div>
+            <dialog>
+                <!-- <button autofocus>Close</button>
+                <p>This modal dialog has a groovy backdrop!</p> -->
+            </dialog>
         </div>
 
 
