--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <head>
         <div class="header-image">
-            <!-- <img src="" alt=""> -->
+            <!-- <img src="img/header-image-2.png" alt="fenty.no"> -->
             <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <p>Få de aller siste nyhetene on Rihannas utgivelser</p>
         </div>
         <nav class="main-menu">
             <ul>
@@ -46,12 +47,12 @@
                 <img class="scroll-down" src="/img/skroll-ned.png">
                 <p class="center-site-info-header">Side Introduksjon</p>
                 <div class="horizontal-line"></div>
-                <p>Velkommen til <b>FENTY.no</b></p>
+                <p class="welcome">Velkommen til <b>FENTY Norge</b></p>
                 <p>Få alle de siste nyhetene om Rihannas seneste utgivelelser fra hennes Fenty univers</p>
             </div>
             <div class="new-posts-site-info">
                 <div class="new-posts-site-info-header">
-                    <p>Klikk på pilene for mer</p>
+                    <!-- <p>Klikk på pilene for mer</p> -->
                     <div class="new-posts-site-info-header-text">
                         <h5>Sjekk ut de nyeste innleggene</h5>
                     </div>
