Made a filter function
filter function based on categories.
changed the text output on the blogposts on homepage to be less content so you'll need to go into the bnlog post to see all

--- a/index.html
+++ b/index.html
@@ -212,8 +212,22 @@
                     <img src="/img/instagram-header.png">
                     <h2>Filtrer Innlegg:</h2>
                     <div class="horizontal-line"></div>
-                    <div class="filter-posts">
-                        <div class="fenty-beauty-checkbox">
+                    <div class="filter-posts-by">
+                        <label for="filter-posts-by">Velg kategori:</label>
+                        <div class="option-inputs">
+                            <select name="filter-posts-by" id="filter-posts-by">
+                                <option value="All">Alle innlegg</option>
+                                <option value="4">Fenty Beauty</option>
+                                <option value="3">Fenty Skin</option>
+                                <option value="5">SavageX</option>
+                                <option value="6">Musikk</option>
+                                <option value="9">Samarbeid</option>
+                                <option value="11">Prisutdelinger</option>
+                                <option value="1">Ukategorisert</option>
+                            </select>
+                        </div>
+                    </div>
+                    <!-- <div class="fenty-beauty-checkbox">
                             <input type="checkbox" id="fenty-beauty-filter" name="fenty-beauty">
                             <label for="fenty-beauty-filter">Fenty Beauty</label>
                         </div>
@@ -233,13 +247,13 @@
                             <input type="checkbox" id="collaboration-filter" name="collaboration">
                             <label for="collaboration-filter">Samarbeid</label>
                         </div>
-                        <button class="filter-button">Filtrer</button>
-                    </div>
+                        <button class="filter-button">Filtrer</button> -->
                 </div>
-                <div class="searchbar">
+                <!-- </div> -->
+                <!-- <div class="searchbar">
                     <label for="searchbar">Eller søk etter tema:</label>
                     <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
-                </div>
+                </div> -->
                 <div class="newest-posts">
                     <img src="/img/instagram-header.png">
                     <h2>Nyeste innlegg</h2>
