--- a/about.html
+++ b/about.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
+    <script type="module" src="js/fetchAPI/getPost.js"></script>
 </head>
 
 <body>
@@ -20,21 +22,24 @@
             <!-- <img src="" alt=""> -->
             <h1 class="site-name-placeholder">FENTY.NO</h1>
         </div>
-        <nav class="main-menu">
-            <ul>
-                <li><a href="index.html">HJEM</a></li>
-                <li><a href="about.html">OM OSS</a></li>
-                <li class="sub-menu-start"><a href="#">VAREMERKER</a>
-                    <ul class="sub-menu">
-                        <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
-                        <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
-                        <li><a href="savagex.html">-SAVAGEx</a></li>
-                    </ul>
-                </li>
-                <li><a href="discography.html">MUSIKK</a></li>
-                <li><a href="contact.html">KONTAKT</a></li>
-            </ul>
-        </nav>
+        <div class="nav-container">
+            <nav class="main-menu">
+                <ul>
+                    <li class="active"><a href="index.html">HJEM</a></li>
+                    <li><a href="about.html">OM OSS</a></li>
+                    <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                        <ul class="sub-menu">
+                            <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
+                            <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
+                            <li><a href="savagex.html">-SAVAGEx</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="discography.html">MUSIKK</a></li>
+                    <li><a href="contact.html">KONTAKT</a></li>
+                </ul>
+            </nav>
+            <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
+        </div>
     </head>
     <main>
         <div class="main-content">
